# NamedType

./: CMakeLists.txt
cmake/: Config.cmake.in
include/NamedType/: named_type_impl.hpp
